--- a/sitehandler/templates/adminlogin.html
+++ b/sitehandler/templates/adminlogin.html
@@ -14,7 +14,7 @@
 	alert('Invalid Credentials..........')
 </script>
 {% endifequal%}
-<body bgcolor = "blue">
+<!-- <body bgcolor = "blue">
 <center>
 <img src = "{%  static 'img/loginadmin.jpg' %}" style = "height: 300px;width:300px;position:absolute; left:605px; down:1000px;">
 <br>
@@ -32,7 +32,7 @@
 
 <h1> Admin Login </h1>
 
-<form method="POST" >
+ <form method="POST" >
 {% csrf_token %}
 
 <input type="text" name="username" placeholder="username" style = "font-size: 30px"  required>
@@ -43,7 +43,41 @@
 <input type="submit" value ="Login" style="border-radius: 8px; font-size: 48px;">
 <br><br>
 </form>
-</center>
+</center> -->
+<style>
+	.bg1
+         { background-color: #b11f91 !important;}
+</style>
+<section class="vh-100">
+    <div class="container py-5 h-100">
+      <div class="row d-flex align-items-center justify-content-center h-100">
+        <div class="col-md-8 col-lg-7 col-xl-6">
+          <img src="{%  static 'img/admin.jpg' %}" class="img-fluid" alt="Phone image">
+        </div>
+        <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+            <form method="post">
+                {% csrf_token %}
+            <!-- Email input -->
+            <h2 style= "color:#b11f91"> Sign in as Admin </h2>
+            <div class="form-outline mb-4">
+              <input type="text" id="form1Example13" class="form-control form-control-lg" name="username" required/>
+              <label class="form-label" for="form1Example13">Username</label>
+            </div>
+  
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+              <input type="password" id="form1Example23" class="form-control form-control-lg" name="password" required/>
+              <label class="form-label" for="form1Example23">Password</label>
+            </div>
+  
+            <div class="d-flex justify-content-around align-items-center mb-4">
+            <!-- Submit button -->
+            <button type="submit" value ="Login" class="btn btn-primary btn-lg btn-block bg1">Sign in</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section> 
 </body>
 
 
