--- a/sitehandler/templates/createaccount.html
+++ b/sitehandler/templates/createaccount.html
@@ -181,19 +181,21 @@
   
                   <div class="form-row form-group">
                     <div class="col-sm-6 label-column">
-                        <label class="col-form-label" for="name-input-field">Consultation Required</label>
+                        <label class="col-form-label" for="name-input-field">Choose Blood Group</label>
                     </div>
                     <div class="col-sm-6 input-column">
-                        <select class="form-control" name="bloodgroup" required="">
-                            <optgroup label="Choose from below">
-                                <option value="O+" selected="">General Physician</option>
-                                <option value="O-">Dermatalogist</option>
-                                <option value="A+">Gynecologists</option>
-                                <option value="A-">Cardiologist</option>
-                                <option value="B+">Neurologists</option>
-                                <option value="B-">Orthopedic</option>
-                                </optgroup>
-                        </select>
+                      <select class="form-control" name="bloodgroup" required="">
+                        <optgroup label="Choose Blood Group">
+                            <option value="O+" selected="">O+</option>
+                            <option value="O-">O-</option>
+                            <option value="A+">A+</option>
+                            <option value="A-">A-</option>
+                            <option value="B+">B+</option>
+                            <option value="B-">B-</option>
+                            <option value="AB+">AB+</option>
+                            <option value="AB-">AB-</option>
+                        </optgroup>
+                    </select>
                     </div>
                 </div>
                 <div class="form-outline mb-4">
