--- a/sitehandler/templates/createaccount.html
+++ b/sitehandler/templates/createaccount.html
@@ -160,20 +160,20 @@
                     <h6 class="mb-0 me-4">Gender: </h6>
   
                     <div class="form-check form-check-inline mb-0 me-4">
-                      <input class="form-check-input" type="radio" name="gender" id="femaleGender"
-                        value="option1" />
+                      <input class="form-check-input" type="radio" id="femaleGender" name="gender"
+                        value="female" />
                       <label class="form-check-label" for="femaleGender"> Female</label>
                     </div>
   
                     <div class="form-check form-check-inline mb-0 me-4">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleGender"
-                        value="option2" />
+                      <input class="form-check-input" type="radio" name="gender" id="maleGender"
+                        value="male" />
                       <label class="form-check-label" for="maleGender"> Male</label>
                     </div>
   
                     <div class="form-check form-check-inline mb-0">
-                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="otherGender"
-                        value="option3" />
+                      <input class="form-check-input" type="radio" name="gender" id="otherGender"
+                        value="other" />
                       <label class="form-check-label" for="otherGender"> Other</label>
                     </div>
   
