--- a/sitehandler/templates/receptionhome.html
+++ b/sitehandler/templates/receptionhome.html
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div>
-                            <h1 class="text-center">You are sucessfully logged in..{{ user.first_name }}</h1>
+                            <h3 class="text-center">You are sucessfully logged in {{ user.first_name }}</h3>
                         </div>
                     </div>
                 </div>
