--- a/sitehandler/templates/adminhome.html
+++ b/sitehandler/templates/adminhome.html
@@ -4,8 +4,7 @@
     {% include 'include.html' %}
     {% load static %}
 </head>
-<body style="background-image: url(&quot;{% static 'img/star-sky.jpg' %}&quot;); background-repeat: no-repeat;
-background-size: auto;">
+<body style="background-image: url(&quot;{% static 'img/star-sky.jpg' %}&quot;);">
     {% include 'adminnav.html' %}
     <div id="wrapper">
         {% include 'admin_include.html' %}
