--- a/sitehandler/static/css/Pretty-Registration-Form.css
+++ b/sitehandler/static/css/Pretty-Registration-Form.css
@@ -77,8 +77,8 @@
 }
 
 .register-form .custom-form .submit-button {
-  border-radius: 2px;
-  background: #6caee0;
+  border-radius: 30px;
+  background: #b21e91;
   color: #ffffff;
   font-weight: bold;
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
