--- a/sitehandler/templates/receptionhome.html
+++ b/sitehandler/templates/receptionhome.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    {% csrf_token %}
     {% include 'adminnav.html' %}
     <div id="wrapper">
         {% include 'reception_nav.html' %}
