--- a/sitehandler/templates/about.html
+++ b/sitehandler/templates/about.html
@@ -15,7 +15,7 @@
     }
 </style>
     
-<div class="login-dark" style="background-image: url(&quot;{% static 'img/about2.jpg' %}&quot;);">
+<div class="login-dark" style="background-image: url(https://hms-devopsec.s3.eu-west-1.amazonaws.com/about2.jpg);">
 
 <h1 class="text-center">About Us</h1>
 <br></br>
