--- a/sitehandler/static/css/Bold-BS4-Animated-Back-To-Top.css
+++ b/sitehandler/static/css/Bold-BS4-Animated-Back-To-Top.css
@@ -10,7 +10,7 @@
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
-  background: rgba(232, 98, 86, 0.8) url(../img/cd-top-arrow.svg) no-repeat center 50%;
+  background: rgba(232, 98, 86, 0.8) url("https://hms-devopsec.s3.eu-west-1.amazonaws.com/cd-top-arrow.svg") no-repeat center 50%;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: opacity .3s 0s, visibility 0s .3s, background-color .3s 0s;
