--- a/sitehandler/templates/adminlogin.html
+++ b/sitehandler/templates/adminlogin.html
@@ -52,7 +52,7 @@
     <div class="container py-5 h-100">
       <div class="row d-flex align-items-center justify-content-center h-100">
         <div class="col-md-8 col-lg-7 col-xl-6">
-          <img src="{%  static 'img/admin.jpg' %}" class="img-fluid" alt="Phone image">
+          <img src="https://hms-devopsec.s3.eu-west-1.amazonaws.com/admin.jpg" class="img-fluid" alt="Phone image">
         </div>
         <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
             <form method="post">
