--- a/sitehandler/templates/adminadddoctor.html
+++ b/sitehandler/templates/adminadddoctor.html
@@ -12,7 +12,7 @@
         background-color: #b21e91 !important;
 </style>
 
-<body style="background-image: url(&quot;{% static 'img/star-sky.jpg' %}&quot;);">
+<body style="background-image: url(https://hms-devopsec.s3.eu-west-1.amazonaws.com/star-sky.jpg)">
     
     {% include 'adminnav.html' %}
     <div id="wrapper">
