--- a/sitehandler/templates/adminaddreceptionist.html
+++ b/sitehandler/templates/adminaddreceptionist.html
@@ -6,7 +6,7 @@
     {% load static %}
 </head>
 
-<body style="background-image: url(&quot;{% static 'img/star-sky.jpg' %}&quot;);">
+<body style="background-image: url(https://hms-devopsec.s3.eu-west-1.amazonaws.com/star-sky.jpg);">
 
     {% include 'adminnav.html' %}
     <div id="wrapper">
