--- a/sitehandler/templates/createaccount.html
+++ b/sitehandler/templates/createaccount.html
@@ -120,7 +120,7 @@
           <div class="card card-registration my-4">
             <div class="row g-0">
               <div class="col-xl-6 d-none d-xl-block">
-                <img src="{% static 'img/consult.jpg' %}"
+                <img src="https://hms-devopsec.s3.eu-west-1.amazonaws.com/consult.jpg"
                   alt="Sample photo" class="img-fluid"
                   style="border-top-left-radius: .25rem; border-bottom-left-radius: .25rem; padding-top:40%"/>
               </div>
