--- a/sitehandler/templates/index.html
+++ b/sitehandler/templates/index.html
@@ -23,7 +23,7 @@
     
     </style>
     
-    <div class="login-dark" style="background-image: url(&quot;{% static 'img/hosp.jpg' %}&quot;);">
+    <div class="login-dark" style="background-image: url(https://hms-devopsec.s3.eu-west-1.amazonaws.com/hosp.jpg);">
 <section class="general-area-home" style= "background-color: rgba(000, 0, 0, 0.5); padding-bottom:130px";>
  
         <h2><br>Book your consultation with doctor online from anywhere!</br></h2> <br>
