--- a/sitehandler/templates/include.html
+++ b/sitehandler/templates/include.html
@@ -4,8 +4,8 @@
 
 <title>HOSPITAL SYSTEM</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="{% static 'fonts/font-awesome.min.css' %}">
-<link rel="stylesheet" href="{% static 'fonts/ionicons.min.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/7.2.1/esm/ionicons.min.js">
 <link rel="stylesheet" href="{% static 'css/back-to-top-scroll-1.css' %}">
 <link rel="stylesheet" href="{% static 'css/back-to-top-scroll.cs' %}s">
 <link rel="stylesheet" href="{% static 'css/Bold-BS4-Animated-Back-To-Top.css' %}">
