--- a/sitehandler/templates/createaccount.html
+++ b/sitehandler/templates/createaccount.html
@@ -230,7 +230,7 @@
 {% ifequal error "no" %}
 <script type="text/javascript">
     alert('Patient saved Sucessfully..........')
-    window.location = ('{% url 'loginpage' %}')
+    window.location = ("{% url 'loginpage' %}")
 </script>
 {% endifequal %}
 
