--- a/sitehandler/templates/createaccount.html
+++ b/sitehandler/templates/createaccount.html
@@ -121,17 +121,17 @@
   </section>
 <!-- ends here-->
 <div class="scroll-top-wrapper"><span class="scroll-top-inner"><i class="fa fa-arrow-circle-up"></i></span></div>
-{% ifequal error "no" %}
+{% if error == "no" %}
 <script type="text/javascript">
     alert('Patient saved Sucessfully..........')
     window.location = ("{% url 'loginpage' %}")
 </script>
-{% endifequal %}
+{% endif %}
 
-{% ifequal error "yes" %}
+{% if error == "yes" %}
 <script type="text/javascript">
     /*alert('{{e}}')*/
     alert('Email already exists....')
 </script>
-{% endifequal %}
+{% endif %}
 {% endblock %}
