--- a/sitehandler/templates/pateintmakeappointments.html
+++ b/sitehandler/templates/pateintmakeappointments.html
@@ -69,19 +69,19 @@
         </div>
     </div>
     <div class="scroll-top-wrapper"><span class="scroll-top-inner"><i class="fa fa-arrow-circle-up"></i></span></div>
-    {% ifequal error "no" %}
+    {% if error == "no" %}
 <script type="text/javascript">
     alert('Appointment Booked Sucessfully..........')
     window.location = ('{% url 'makeappointments' %}')
 </script>
-{% endifequal%}
+{% endif%}
 
-{% ifequal error "yes" %}
+{% if error == "yes" %}
 <script type="text/javascript">
     /*alert('{{e}}')*/
     alert('Something gone wrong....')
 </script>
-{% endifequal%}
+{% endif%}
      <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/back-to-top-scroll.js' %}"></script>
