--- a/sitehandler/templates/include.html
+++ b/sitehandler/templates/include.html
@@ -232,7 +232,7 @@
         max-width: 300px;
         margin: auto;
         text-align: center;
-        font-family: arial;
+        
       }
       
       #team {
@@ -589,7 +589,7 @@
     
         function checkBackToTop() {
             var windowTop = window.scrollY || document.documentElement.scrollTop;
-            ( windowTop > offset ) ? addClass(backTop, 'cd-top--show') : removeClass(backTop, 'cd-top--show', 'cd-top--fade-out');
+            ( windowTop > offset ) ? addClass(backTop, 'cd-top--show') : removeClass(backTop, 'cd-top--show');
             ( windowTop > offsetOpacity ) && addClass(backTop, 'cd-top--fade-out');
             scrolling = false;
         }
