--- a/sitehandler/templates/adminhome.html
+++ b/sitehandler/templates/adminhome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+ <head><title></title>
     {% include 'include.html' %}
     {% load static %}
 </head>
