--- a/sitehandler/templates/adminviewDoctors.html
+++ b/sitehandler/templates/adminviewDoctors.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+ <head><title></title>
     {% include 'include.html' %}
     {% load static %}
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
