--- a/sitehandler/templates/createaccount.html
+++ b/sitehandler/templates/createaccount.html
@@ -106,7 +106,7 @@
                     <label class="form-label" for="form3Example97">Confirm Password</label>
                   </div>
                   <div class="logingit">
-                    <figure><img src="https://hms-devopsec.s3.eu-west-1.amazonaws.com/arrow.gif"  width="80" height="80"> </figure>
+                    <figure><img src="https://hms-devopsec.s3.eu-west-1.amazonaws.com/arrow.gif"  width="80" height="80" alt="arrow"> </figure>
                     <a href="{% url 'loginpage' %}" class="logingit-link" style ="color:#b11f91">Already Member</a>
                 </div> <br>
                 <button class="btn btn-primary submit-button bg1" type="submit">Create Account</button>
