--- a/sitehandler/templates/index.html
+++ b/sitehandler/templates/index.html
@@ -36,9 +36,9 @@
         <div class="row">
             <div class="col">
                 <p class="text-center">This website allows user to book an appointment with doctor.
-                    <li><i>You can view the old appointments</i></li> 
+                  <ul>  <li><i>You can view the old appointments</i></li> 
                     <li><i>View the prescription</i></li> 
-                    <li><i>View the reports</i></li>.
+                    <li><i>View the reports</i></li></ul>
                     <a data-bs-hover-animate="flash" href="{% url 'aboutpage' %}" style= "color:#b11f91 ">For more details..</a></p>
             </div>
         </div>
