--- a/sitehandler/templates/adminnav.html
+++ b/sitehandler/templates/adminnav.html
@@ -4,7 +4,7 @@
    
 </style>
 <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-primary float-none">
-    <div class="container-fluid"><img src="{% static 'img/1.jpg' %}" width="30px" height="30px" alt="10px"><a class="navbar-brand text-center" href="{% url 'homepage' %}"  style="margin: 0px 0px;"><i>ConsultEase</i></a>
+    <div class="container-fluid"><img src="https://hms-devopsec.s3.eu-west-1.amazonaws.com/1.jpg" width="30px" height="30px" alt="admin"><a class="navbar-brand text-center" href="{% url 'homepage' %}"  style="margin: 0px 0px;"><i>ConsultEase</i></a>
         <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="nav navbar-nav text-light ml-auto">
                 <li class="nav-item" role="presentation"></li>
