--- a/sitehandler/templates/doctorprofile.html
+++ b/sitehandler/templates/doctorprofile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head>
+ <head><title></title>
     {% include 'include.html' %}
     {% load static %}
 </head>
