--- a/sitehandler/templates/navbar.html
+++ b/sitehandler/templates/navbar.html
@@ -4,7 +4,7 @@
    
 </style>
 <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-primary">
-    <div class="container-fluid"><img src="https://hms-devopsec.s3.eu-west-1.amazonaws.com/1.jpg" width="30px" height="30px" alt="10px"><a class="navbar-brand text-center" href="{% url 'homepage' %}" style="margin: 0px 0px;"><i>ConsultEase</i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <div class="container-fluid"><img src="https://hms-devopsec.s3.eu-west-1.amazonaws.com/1.jpg" width="30px" height="30px" alt="admin"><a class="navbar-brand text-center" href="{% url 'homepage' %}" style="margin: 0px 0px;"><i>ConsultEase</i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div
             class="collapse navbar-collapse" id="navcol-1">
             <ul class="nav navbar-nav text-light ml-auto">
