--- a/sitehandler/templates/adminviewappointments.html
+++ b/sitehandler/templates/adminviewappointments.html
@@ -21,25 +21,25 @@
                                 <h5 style="color:blue;"><a><i class="fa fa-calendar-check-o"></i>  {{ i.patientname }} appointment with {{ i.doctorname }} on {{i.appointmentdate}}</a></h5>
                             </div>
                             <div class = "card-body collapsible-body">
-                                <table align="center" class="card-text" style="font-size: 19px;">
+                                <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <td>Doctor Name:</td>
+                                        <th>Doctor Name:</th>
                                         <td>{{i.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Patient Name:</td>
+                                        <th>Patient Name:</th>
                                         <td>{{i.patientname}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Appointment Date:</td>
+                                        <th>Appointment Date:</th>
                                         <td>{{i.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Appointment Time:</td>
+                                        <th>Appointment Time:</th>
                                         <td>{{i.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Symptoms:</td>
+                                        <th>Symptoms:</th>
                                         <td>{{i.symptoms}}</td>
                                     </tr> 
                                 </table>
@@ -57,25 +57,25 @@
                                 <h5 style="color:blue;"><a><i class="fa fa-calendar-check-o"></i>  {{ j.patientname }} appointment with {{ j.doctorname }} on {{j.appointmentdate}}</a></h5>
                             </div>
                             <div class = "card-body collapsible-body">
-                                <table align="center" class="card-text" style="font-size: 19px;">
+                                <table align="center" class="card-text" style="font-size: 19px;"> <caption></caption>
                                     <tr>
-                                        <td>Doctor Name:</td>
+                                        <th>Doctor Name:</th>
                                         <td>{{j.doctorname}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Patient Name:</td>
+                                        <th>Patient Name:</th>
                                         <td>{{j.patientname}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Appointment Date:</td>
+                                        <th>Appointment Date:</th>
                                         <td>{{j.appointmentdate}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Appointment Time:</td>
+                                        <th>Appointment Time:</th>
                                         <td>{{j.appointmenttime}}</td>
                                     </tr>
                                     <tr>
-                                        <td>Symptoms:</td>
+                                        <th>Symptoms:</th>
                                         <td>{{j.symptoms}}</td>
                                     </tr> 
                                 </table>
