--- a/sitehandler/templates/adminviewDoctors.html
+++ b/sitehandler/templates/adminviewDoctors.html
@@ -25,7 +25,7 @@
                 <section id="team" class="pb-5">
                     <div class="container">
                        <table class="table" id="example"><!--table-hover-->
-                            <thead>
+                           <caption></caption> <thead>
                                 <tr>
                                     <th>Name</th>
                                     <th>Email</th>
